添加rss启动显示和设置
